--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -5,6 +5,7 @@ on:
       - "main"
     paths:
       - "website/**"
+      - "CHANGELOG.md"
   workflow_dispatch:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
@@ -26,6 +27,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Copy changelog
+        run: ./website/scripts/copy_changelog.sh
+        shell: bash
       - name: Build
         uses: shalzz/zola-deploy-action@v0.16.1
         env:
