--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,7 +11,7 @@ repos:
     hooks:
       - id: pretty-format-kotlin
         args: [--autofix]
-  - repo: https://github.com/redwarp/optimize-png-hooks
-    rev: v1.2.1
+  - repo: https://github.com/shssoichiro/oxipng
+    rev: v6.0.1
     hooks:
-      - id: optimize-png
+      - id: oxipng
