--- a/.github/workflows/verify-pull-requests.yml
+++ b/.github/workflows/verify-pull-requests.yml
@@ -19,6 +19,7 @@ jobs:
   tests:
     name: Tests
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v3
