--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,8 +70,6 @@ spotless {
 }
 
 dependencies {
-    var compose_version = '1.2.1'
-
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation(project(':markdown'))
     implementation 'androidx.appcompat:appcompat:1.5.1'
@@ -86,15 +84,15 @@ dependencies {
     implementation "androidx.datastore:datastore-preferences:1.0.0"
 
     // Integration with activities
-    implementation 'androidx.activity:activity-compose:1.5.1'
+    implementation 'androidx.activity:activity-compose:1.6.1'
     // Compose Material Design
-    implementation "androidx.compose.material:material:$compose_version"
+    implementation "androidx.compose.material:material:1.3.1"
     // Animations
-    implementation "androidx.compose.animation:animation:$compose_version"
+    implementation "androidx.compose.animation:animation:1.3.2"
     // Tooling support (Previews, etc.)
-    implementation "androidx.compose.ui:ui-tooling:$compose_version"
-    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation "androidx.navigation:navigation-compose:2.5.2"
+    implementation "androidx.compose.ui:ui-tooling:1.3.2"
+    implementation "androidx.compose.ui:ui-tooling-preview:1.3.2"
+    implementation "androidx.navigation:navigation-compose:2.5.3"
 
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.27.0"
 
@@ -103,9 +101,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     // Test rules and transitive dependencies:
-    androidTestImplementation("androidx.compose.ui:ui-test-junit4:$compose_version")
+    androidTestImplementation("androidx.compose.ui:ui-test-junit4:1.3.2")
     // Needed for createComposeRule, but not createAndroidComposeRule:
-    debugImplementation("androidx.compose.ui:ui-test-manifest:$compose_version")
+    debugImplementation("androidx.compose.ui:ui-test-manifest:1.3.2")
     androidTestImplementation 'tools.fastlane:screengrab:2.1.1'
 }
 
