--- a/markdown/build.gradle
+++ b/markdown/build.gradle
@@ -47,17 +47,15 @@ spotless {
 }
 
 dependencies {
-    var compose_version = '1.2.1'
-
     api 'org.commonmark:commonmark:0.21.0'
     implementation 'io.coil-kt:coil-compose:2.2.2'
 
     // Compose Material Design
-    implementation "androidx.compose.material:material:$compose_version"
+    implementation "androidx.compose.material:material:1.3.1"
 
     // Tooling support (Previews, etc.)
-    implementation "androidx.compose.ui:ui-tooling:$compose_version"
-    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+    implementation "androidx.compose.ui:ui-tooling:1.3.2"
+    implementation "androidx.compose.ui:ui-tooling-preview:1.3.2"
 
 
     testImplementation 'junit:junit:4.13.2'
@@ -65,7 +63,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     // Test rules and transitive dependencies:
-    androidTestImplementation("androidx.compose.ui:ui-test-junit4:$compose_version")
+    androidTestImplementation("androidx.compose.ui:ui-test-junit4:1.3.2")
     // Needed for createComposeRule, but not createAndroidComposeRule:
-    debugImplementation("androidx.compose.ui:ui-test-manifest:$compose_version")
+    debugImplementation("androidx.compose.ui:ui-test-manifest:1.3.2")
 }
