--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 /.idea/google-java-format.xml
 /.idea/misc.xml
 /.idea/deploymentTargetDropDown.xml
+/.idea/kotlinc.xml
+/.idea/gradle.xml
 .DS_Store
 /build
 /captures
