--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 android {
-    compileSdkVersion 33
+    compileSdk 33
 
     defaultConfig {
         applicationId "net.redwarp.gifwallpaper"
@@ -73,7 +73,7 @@ spotless {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation(project(':markdown'))
-    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'androidx.appcompat:appcompat:1.6.0'
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
@@ -89,22 +89,22 @@ dependencies {
     // Compose Material Design
     implementation "androidx.compose.material:material:1.3.1"
     // Animations
-    implementation "androidx.compose.animation:animation:1.3.2"
+    implementation "androidx.compose.animation:animation:1.3.3"
     // Tooling support (Previews, etc.)
-    implementation "androidx.compose.ui:ui-tooling:1.3.2"
-    implementation "androidx.compose.ui:ui-tooling-preview:1.3.2"
+    implementation "androidx.compose.ui:ui-tooling:1.3.3"
+    implementation "androidx.compose.ui:ui-tooling-preview:1.3.3"
     implementation "androidx.navigation:navigation-compose:2.5.3"
 
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.28.0"
 
     testImplementation 'junit:junit:4.13.2'
-    testImplementation 'org.robolectric:robolectric:4.9.1'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+    testImplementation 'org.robolectric:robolectric:4.9.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     // Test rules and transitive dependencies:
-    androidTestImplementation("androidx.compose.ui:ui-test-junit4:1.3.2")
+    androidTestImplementation("androidx.compose.ui:ui-test-junit4:1.3.3")
     // Needed for createComposeRule, but not createAndroidComposeRule:
-    debugImplementation("androidx.compose.ui:ui-test-manifest:1.3.2")
+    debugImplementation("androidx.compose.ui:ui-test-manifest:1.3.3")
     androidTestImplementation 'tools.fastlane:screengrab:2.1.1'
 }
 
